<resources>
    <string name="app_name">Kidney Health App</string>


    <string name="hint_last_name">last name</string>
    <string name="hint_first_name">first name</string>
    <string name="patient">Patient</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hint_age">Age</string>
    <string name="center_name">Center name</string>
    <string name="dialysis_centers">Dialysis Centers</string>
    <string name="hint_name">Name</string>
    <string name="doctor_name">Doctor name</string>
    <string name="hint_user_name">User name</string>
    <string name="hint_password">password</string>
    <string name="login">Login</string>
    <string name="btn_link_to_register">Not registered yet..Register</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_address">Address</string>
    <string name="register">Register</string>
    <string name="btn_link_to_login">You are already registered..Login</string>
    <string name="center_location">Location</string>
    <string name="make_appointment">Make an appointment</string>
    <string name="confirmation_dialog">Appointment Confirmation</string>
    <string name="are_you_sure_you">Are you sure you want to approve this appointment?</string>
    <string name="yes">Yes</string>
    <string name="cancel">cancel</string>
    <string name="profile_name">Name</string>
    <string name="profile_username">Username</string>
    <string name="profile_mobile">"Mobile "</string>
    <string name="profile_address">Address</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="menu_share">Share</string>
    <string name="menu_report_problem">report</string>
    <string name="field_missing_message">Some fileds are missing Please fill them</string>
    <string name="my_appointments">My Appointments</string>
    <string name="daily_info">Daily info</string>
    <string name="doctor_inst">Doctor Instructions</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="search_center">Search for ceanters</string>
    <string name="details">Details</string>
    <string name="ok">Ok</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="result">Result :</string>
    <string name="patient_status">Patient Status :</string>
    <string name="appointment_requests">Appointment Requests</string>
    <string name="patients">Patients</string>
    <string name="my_center">My center</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="place_holder">Send a message</string>
    <string name="view_doctor_instructions">View doctor instructions</string>
    <string name="doctor">Doctor</string>
    <string name="patient_name">Patient name</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="center_info">Center Info</string>
    <string name="update_center">Update Center Information</string>
    <string name="view_profile">View Patient Profile</string>
    <string name="hint_gender">Gender</string>
    <string name="view_nearest">Nearest Centers</string>
    <string name="doctors">Doctors</string>
    <string name="view_all">All centers</string>
    <string name="hint_email">Email</string>
    <string name="hint_details">Details</string>
    <string name="center_lat">Latitude</string>
    <string name="center_lon">Longitude</string>
    <string name="wrong_pass">Wrong email or password</string>
    <string name="update_profile">Update Profile</string>
    <string name="appointment_success">Appointment reserved successfully</string>
    <string name="insert_info_success">Info saved successfully</string>
    <string name="operation_error">Some error happened please try again later</string>
    <string name="insert_info">Insert info</string>
    <string name="hint_water">Water</string>
    <string name="hint_medicine">Medicine</string>
    <string name="get_center_succes">Center info loaded successfully</string>
    <string name="error_load_data">Error Loading data</string>
    <string name="error_send_msg">Error send message</string>
    <string name="success_send_msg">Send message successfully</string>
    <string name="empty_msg">You can not send an empty message</string>
    <string name="start_chat_success">Chat started successfully</string>
    <string name="hint_water_quantity">Water quantity</string>
    <string name="deletion_dialog">Are you sure you want to delete this item ?</string>
    <string name="success_delete">Item deleted successfully</string>
    <string name="chat_list">Chat list</string>
    <string name="chat_exist">Chat is already exist in chats</string>
    <string name="add_daily_info">Add daily info</string>
    <string name="hint_center_name">Center Name</string>
    <string name="hint_center_info">Center Info</string>
    <string name="hint_center_location">Center Location</string>
    <string name="hint_center_lat">Center latitude</string>
    <string name="hint_center_lon">Center Longitude</string>
    <string name="patient_details">Patient Details</string>
    <string name="view_instructions">View Instructions</string>
    <string name="account_not_linked_to_center">This account is not linked to any center yet</string>
    <string name="are_you_sure_reject">Are you sure you want to reject this appointment</string>
    <string name="appointment_status_success">Appointment status changed successfully</string>
    <string name="are_you_sure_approve">Are you sure you want to approve this appointment</string>
    <string name="reject_dialog">Appointment reject</string>
    <string name="edit">Edit</string>
    <string name="result_info">Result info</string>
    <string name="appointment_edit">Appointment edit</string>
    <string name="appointment_edit_success">Edit Appointment Info successfully</string>
    <string name="center_patients">Center patients</string>
    <string name="patient_instructions">Instructions to patient</string>
    <string name="instruction">Instruction</string>
    <string name="add_instruction">Add Instruction</string>
    <string name="add">Add</string>
    <string name="inst_add_success">Instruction added successfully</string>
    <string name="manage_patients">Manage patients</string>
    <string name="manage_doctors">Manage doctors</string>
    <string name="manage_centers">Manage centers</string>
    <string name="center_details">Center details</string>
    <string name="update_center_">Update center</string>
    <string name="link_to_center">Link to center</string>
    <string name="doctor_details">Doctor Details</string>
    <string name="doctor_deleted_success">Doctor account deleted successfully</string>
    <string name="add_center">Add new center</string>
    <string name="center_added">New center added successfully</string>
    <string name="patient_deleted_success">Patient account deleted successfully</string>
    <string name="center_deleted_success">Center deleted successfully</string>
    <string name="doctor_linked_to">Doctor linked to center successfully</string>


</resources>