<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item
        android:id="@+id/menu_dialysis_centers"
        android:icon="@drawable/hospital"
        android:title="@string/dialysis_centers"
        android:actionLayout="@layout/fragment_dialysis_centers"
        />

    <item
        android:id="@+id/menu_appointments"
        android:icon="@drawable/ic_medical_appointment"
        android:title="@string/my_appointments"
        android:actionLayout="@layout/fragment_my_appointments"
        />

    <item
        android:id="@+id/menu_doctors"
        android:icon="@drawable/ic_doctor"
        android:title="@string/doctors"
        android:actionLayout="@layout/fragment_doctors_list"
    />
    <item
        android:id="@+id/menu_chat_list"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat_list"
        android:actionLayout="@layout/fragment_doctors_chat_list"
        />
    <item
        android:id="@+id/menu_daily_info"
        android:icon="@drawable/ic_daily"
        android:title="@string/daily_info"
        />
    <item
        android:id="@+id/menu_patient_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        />
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        />


</group>

</menu>
