<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activities.Register"
    android:layoutDirection="ltr">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <RadioGroup
            android:id="@+id/type_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:weightSum="2"

            >
            <RadioButton
                android:id="@+id/patient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:text="@string/patient"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/doctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/white"
                android:text="@string/doctor"
                android:textColor="@color/white" />


        </RadioGroup>
        <EditText
            android:id="@+id/first_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_first_name"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:background="@drawable/bg_et_input"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"/>
        <EditText
            android:id="@+id/last_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_last_name"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:background="@drawable/bg_et_input"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:background="@drawable/bg_et_input"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />


        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:background="@drawable/bg_et_input"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:padding="10dp"
            android:singleLine="true"
            android:background="@drawable/bg_et_input"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <RadioGroup
            android:id="@+id/gender_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:weightSum="2"

            >
            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:text="@string/male"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:text="@string/female"
                android:layout_weight="1"/>


        </RadioGroup>
        <EditText
            android:id="@+id/age"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_age"
            android:inputType="phone"
            android:padding="10dp"
            android:singleLine="true"
            android:background="@drawable/bg_et_input"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />


        <EditText
            android:id="@+id/address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_address"
            android:inputType="textPostalAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:background="@drawable/bg_et_input"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/details"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_details"
            android:inputType="textPostalAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:background="@drawable/bg_et_input"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />



        <!-- Login Button -->
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:text="@string/register"
            android:background="@drawable/bg_login_btn"
            android:textColor="@color/black"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"/>
        



        <!-- Link to Login Screen -->
        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>