<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/appointment_edit"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/headline"
        android:padding="10dp"
        >
        <EditText
            android:id="@+id/result_info"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:hint="@string/result_info"
            android:layout_marginBottom="6dp"
            android:background="@drawable/bg_et_input_edit"
            android:padding="10dp"
            />
        <EditText
            android:id="@+id/patient_status"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:hint="@string/patient_status"
            android:layout_marginBottom="6dp"
            android:background="@drawable/bg_et_input_edit"
            android:padding="10dp"
            />
    </LinearLayout>


    <TextView
        android:id="@+id/yes_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputs"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingBottom="16dp"
        android:text="@string/edit"
        android:textColor="@color/primaryTextColorDark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/no_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/yes_btn"
        android:layout_below="@id/inputs"
        android:paddingBottom="16dp"
        android:textSize="18sp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/cancel"/>



</RelativeLayout>